archick align fix

--- a/src/css/mainPage/index.css
+++ b/src/css/mainPage/index.css
@@ -385,6 +385,7 @@ body {
 
 .power-image .image-content--large {
   height: 0.55em;
+  font-size: 7em;
   line-height: 0.5;
 }
 
@@ -542,6 +543,7 @@ footer {
   .budget-image,
   .power-image {
     flex-direction: column;
+    align-items: flex-start;
   }
 
   .image-content--middle br {
@@ -559,6 +561,7 @@ footer {
 
   .image-content-description .image-content-section {
     margin-left: 0;
+    margin-right: 1em;
   }
 
   .power-image .image-content--large {
